options fixes for zoom (content can't disappear behind header anymore)

--- a/options/options.css
+++ b/options/options.css
@@ -14,6 +14,7 @@ body {
 /* Header */
 
 header {
+    height: 67px;
     white-space: nowrap;
     color: hsl(0, 0%, 37%);
     background-color: hsl(0, 0%, 99%);
@@ -54,6 +55,7 @@ form {
     display: inline;
 }
 #status {
+    height: 27px;
     color: hsl(0, 0%, 99%);
     background: hsl(0, 0%, 18%);
     position: fixed;
@@ -69,9 +71,8 @@ form {
 #content {
     position: absolute;
     width: 100%;
-    line-height: 1.2;
     color: hsl(0, 0%, 37%);
-    top: 13vh;
+    top: calc(67px + 8vh);
     left: 0;
     right: 0;
     padding-bottom: 55px;
